<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Topic Learn</string>
    <string name="topic_learn">Topic Learn</string>
    <string name="learn_topics">Learn by Topics</string>
    <string name="getting_started">Getting Started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="hint_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="fullname">Fullname</string>
    <string name="educational_level">Educational Level</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="save_topic">Save Topic</string>
    <string name="enter_topic">Enter Topic</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_account_text">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_title">Lessons</string>
    <string name="welcome_text">Welcome to Topic Learn</string>
    <string name="intro_text">Learn topics in an insightful way. Add topics of interest to your profile.</string>
</resources>